[project]
name = "pyintesishome"
version = "1.9.0"
description = "A python3 library for running asynchronus communications with IntesisHome Smart AC Controllers"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "James Nimmo", email = "james@nimmo.net.nz" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
urls = { Repository = "https://github.com/jnimmo/pyIntesisHome" }
dependencies = ["aiohttp>=3.7.4,<4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyintesishome"]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "codecov==2.1.13",
    "mock-open==1.4.0",
    "mypy==0.971",
    "pipdeptree==2.2.1",
    "pre-commit==2.20.0",
    "pylint==2.15.0",
    "pytest==7.1.2",
    "pytest-aiohttp==0.3.0",
    "pytest-cov==3.0.0",
    "pytest-github-actions-annotate-failures==0.1.7",
    "pytest-sugar==0.9.5",
    "pytest-test-groups==1.0.3",
    "pytest-timeout==2.1.0",
    "pytest-xdist==2.5.0",
    "requests-mock==1.9.2",
    "respx==0.19.2",
]
